--- a/tbr.css
+++ b/tbr.css
@@ -39,15 +39,32 @@
 
 }
 
-
 @font-face { font-family: BebasNeue-Bold; src: url("BebasNeue-Bold.ttf"); }
 @font-face { font-family: Ubuntu-Regular; src: url("Ubuntu-Regular.ttf"); }
 
+.container a {
+    text-decoration: none;
+    color: black;
+}
+
+.container a:hover {
+    color: #707070;
+}
 
 .container h1 {
 
     font-family: BebasNeue-Bold;
 
+}
+
+.email-l {
+    display: flex;
+    align-items: center;
+}
+
+.email-t {
+    margin-left: 8px;
+    font-size: 18px;
 }
 
 .btn {
@@ -75,8 +92,6 @@
     font-family: Ubuntu-Regular ;
 
 }
-
-
 
 @media (max-width: 992px) {
 
@@ -171,3 +186,4 @@
         font-size: small;
     }
 }
+
